--- a/Cloud-Manim-Compiler-JupyterLab.ipynb
+++ b/Cloud-Manim-Compiler-JupyterLab.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1839b636",
+   "metadata": {},
+   "source": [
+    "### ManimGL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "honest-cruise",
    "metadata": {},
    "source": [
-    "### 前往[我的Manim社区](https://manim.notion.site/)\n"
+    "### 前往[我的Manim社区](https://manim.notion.site/)\n",
+    "本站已成功完成![](https://w.saobby.com/w/6sungmds)次请求"
    ]
   },
   {
